[gd_scene load_steps=4 format=2]

[ext_resource path="res://perto.tscn" type="PackedScene" id=1]
[ext_resource path="res://pc.png" type="Texture" id=2]
[ext_resource path="res://PC.gd" type="Script" id=4]

[node name="PC" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="perto" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_top = -0.978
anchor_right = 1.0
margin_left = -32.0
margin_top = -32.408
margin_right = -32.0
margin_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.7, 0.7 )
alignment = 2

[node name="contratar" type="Button" parent="UI/VBoxContainer"]
margin_right = 101.0
margin_bottom = 20.0
text = "contratar: 100"

[node name="melhorar" type="Button" parent="UI/VBoxContainer"]
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "melhorar: 20"

[node name="melhorarPessoa" type="Button" parent="UI/VBoxContainer"]
margin_top = 48.0
margin_right = 101.0
margin_bottom = 68.0
text = "melhorar: 20"

[node name="granada" type="Button" parent="UI/VBoxContainer"]
margin_top = 72.0
margin_right = 101.0
margin_bottom = 92.0
text = "fazer grana"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="UI/VBoxContainer/contratar" to="." method="_on_contratar_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/melhorar" to="." method="_on_melhorar_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/melhorarPessoa" to="." method="_on_melhorarPessoa_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/granada" to="." method="_on_granada_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
